[tool.poetry]
name = "uv_spec"
version = "0.1.0"
description = ""
authors = ["David <oconned6@tcd.ie>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.2"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
